*Empty MediaWiki Message*

--- a/Cuvashiya.mw
+++ b/Cuvashiya.mw
@@ -6,3 +6,75 @@
 
 [[Category:Cuvashiya| ]]
 [[Category:Ibihugu]]
+
+[[ace:Republik Chuvash]]
+[[af:Tsjoewasjië]]
+[[ar:تشوفاشيا]]
+[[az:Çuvaşıstan]]
+[[be:Чувашыя]]
+[[be-x-old:Чуваская Рэспубліка]]
+[[bs:Čuvašija]]
+[[bg:Чувашия]]
+[[bxr:Чавааш Республика]]
+[[ca:Txuvàixia]]
+[[cv:Чăваш Республики]]
+[[cs:Čuvašsko]]
+[[de:Tschuwaschien]]
+[[et:Tšuvaššia]]
+[[el:Τσουβασία]]
+[[en:Chuvash Republic]]
+[[myv:Ветькень Республикась]]
+[[es:Chuvasia]]
+[[eo:Ĉuvaŝio]]
+[[eu:Txuvaxia]]
+[[fa:چواشستان]]
+[[fr:Tchouvachie]]
+[[ga:An tSuvais]]
+[[gag:Çuvaşiya]]
+[[xal:Чәвәш таңһч]]
+[[ko:추바시 공화국]]
+[[hr:Čuvaška]]
+[[id:Chuvashia]]
+[[os:Чуваши]]
+[[it:Ciuvascia]]
+[[he:צ'ובשיה]]
+[[pam:Chuvashia]]
+[[ka:ჩუვაშეთი]]
+[[kv:Чувашия]]
+[[lv:Čuvašija]]
+[[lt:Čiuvašija]]
+[[mk:Чувашија]]
+[[mr:चुवाशिया प्रजासत्ताक]]
+[[ms:Chuvashia]]
+[[mn:Чуваш]]
+[[nl:Tsjoevasjië]]
+[[ja:チュヴァシ共和国]]
+[[pih:Shuwashya]]
+[[no:Tsjuvasjia]]
+[[nn:Tsjuvasjia]]
+[[mhr:Чуваший]]
+[[pnb:چوواشیا]]
+[[pl:Czuwaszja]]
+[[pt:Chuváchia]]
+[[crh:Çuvaşistan]]
+[[ro:Ciuvașia]]
+[[ru:Чувашия]]
+[[sah:Чувашия]]
+[[sq:Çuvashia]]
+[[sk:Čuvašsko]]
+[[sl:Čuvašija]]
+[[sr:Чувашија]]
+[[sh:Čuvaška]]
+[[fi:Tšuvassia]]
+[[sv:Tjuvasjien]]
+[[tl:Chuvashia]]
+[[ta:சுவாசியா]]
+[[tt:Чуаш Республикасы]]
+[[tr:Çuvaşistan]]
+[[tk:Çuwaşystan]]
+[[udm:Чувашия]]
+[[uk:Чуваська Республіка]]
+[[ug:چۇۋاشىيە]]
+[[vi:Chuvashia]]
+[[war:Chuvashia]]
+[[zh:楚瓦什共和国]]
