--- a/Igicuvashi.mw
+++ b/Igicuvashi.mw
@@ -85,6 +85,7 @@
 *http://cv.wikipedia.org/wiki/Тĕп_страница
 
 [[Category:Indimi z’ikinyaturukiya]]
+[[Category:Cuvashiya]]
 
 [[als:Tschuwaschische Sprache]]
 [[az:Çuvaş dili]]
