/* Amagambo n’interuro mu cyarabu */

--- a/Icyarabu.mw
+++ b/Icyarabu.mw
@@ -13,7 +13,7 @@
 * '''نعم''' – Yego
 * '''لا''' – Oya
 
-== Imibare ))
+== Imibare ==
 *'''واحد''' – rimwe
 *'''اثنان''' – kabiri
 *'''ثلاثة''' – gatatu
