*Empty MediaWiki Message*

--- a/Icyabukaziyani.mw
+++ b/Icyabukaziyani.mw
@@ -153,6 +153,9 @@
 | Џь џь|| ǰ'|| /d͡ʒ/
 |}
 
+[[Category:Indimi]]
+[[Category:Abukaziya]]
+
 [[ab:Аҧсуа бызшәа]]
 [[an:Idioma abkhasio]]
 [[az:Abxaz dili]]
