--- a/Icyabukaziyani.mw
+++ b/Icyabukaziyani.mw
@@ -153,6 +153,9 @@
 | Џь џь|| ǰ'|| /d͡ʒ/
 |}
 
+== Wikipediya mu cyabukaziyani ==
+*http://ab.wikipedia.org/wiki/Ихадоу_адаҟьа
+
 [[Category:Indimi]]
 [[Category:Abukaziya]]
 
