--- a/Icyabukaziyani.mw
+++ b/Icyabukaziyani.mw
@@ -11,43 +11,43 @@
 * '''ахыҧхьаӡара''' – umubare
 * '''ахыҧхьаӡарақәа''' – imibare
 * '''акы''' – rimwe
-* '''dos''' – kabiri
-* '''tres''' – gatatu
-* '''quatre''' – kane
-* '''cinc''' – gatanu
-* '''sis''' – gatandatu
-* '''set''' – karindwi
-* '''vuit / huit''' – umunani
-* '''nou''' – icyenda
-* '''deu''' – icumi
-* '''onze''' – cumi na rimwe
-* '''dotze''' – cumi na kaviri
-* '''tretze''' – cumi na gatatu
-* '''catorze''' – cumi na kane
-* '''quinze''' – cumi na gatanu
-* '''setze''' – cumi na gatandatu
-* '''disset / desset / dèsset''' – cumi na karindwi
-* '''divuit / díhuit / devuit''' – cumi n’umunani
-* '''dinou / denou /dènou''' – cumi n’icyenda
-* '''vint''' – makumyabiri
-* '''vint-i-u''' – makumyabiri na rimwe
-* '''vint-i-dos''' – makumyabiri na kaviri
-* '''vint-i-tres''' – makumyabiri na gatatu
-* '''vint-i-quatre''' – makumyabiri na kane
-* '''vint-i-cinc''' – makumyabiri na gatanu
-* '''vint-i-sis''' – makumyabiri na gatandatu
-* '''vint-i-set''' – makumyabiri na karindwi
-* '''vint-i-vuit / vint-i-huit''' – makumyabiri n’umunani
-* '''vint-i-nou''' – makumyabiri n’icyenda 
-* '''trenta''' – mirongo itatu
-* '''quaranta''' – mirongo ine
-* '''cinquanta''' – mirongo itanu
-* '''seixanta''' – mirongo itandatu
-* '''setanta''' – mirongo irindwi
-* '''vuitanta / huitanta''' – mirongo inani
-* '''noranta''' – mirongo cyenda
-* '''cent''' – ijana
-* '''mil''' – igihumbi
+* '''ҩба''' – kabiri
+* '''хҧа''' – gatatu
+* '''ҧшьба''' – kane
+* '''хуба''' – gatanu
+* '''фба''' – gatandatu
+* '''быжьба''' – karindwi
+* '''ааба''' – umunani
+* '''жәба''' – icyenda
+* '''жәаба''' – icumi
+* '''жәеиза''' – cumi na rimwe
+* '''жәеҩа''' – cumi na kaviri
+* '''жәаха''' – cumi na gatatu
+* '''жәиҧшь''' – cumi na kane
+* '''жәыху''' – cumi na gatanu
+* '''жәаф''' – cumi na gatandatu
+* '''жәибжь''' – cumi na karindwi
+* '''жәаа''' – cumi n’umunani
+* '''зеижә''' – cumi n’icyenda
+* '''ҩажәа''' – makumyabiri
+* '''ҩажәеи акы''' – makumyabiri na rimwe
+* '''ҩажәеи ҩба''' – makumyabiri na kaviri
+* '''ҩажәеи хҧа''' – makumyabiri na gatatu
+* '''ҩажәеи ҧшьба''' – makumyabiri na kane
+* '''ҩажәеи хуба''' – makumyabiri na gatanu
+* '''ҩажәеи фба''' – makumyabiri na gatandatu
+* '''ҩажәеи быжьба''' – makumyabiri na karindwi
+* '''ҩажәеи ааба''' – makumyabiri n’umunani
+* '''ҩажәеи жәба''' – makumyabiri n’icyenda 
+* '''ҩажәеи жәаба''' – mirongo itatu
+* '''ҩынҩажәа''' – mirongo ine
+* '''ҩынҩажәа жәаба''' – mirongo itanu
+* '''хынҩажәа''' – mirongo itandatu
+* '''хынҩажәа жәаба''' – mirongo irindwi
+* '''ҧшьынҩажәа''' – mirongo inani
+* '''ҧшьынҩажәа жәаба''' – mirongo cyenda
+* '''шәкы''' – ijana
+* '''зқьы''' – igihumbi
 
 == Alfabeti y’Icyabukaziyani==
 
