*Empty MediaWiki Message*

--- a/Icyabukaziyani.mw
+++ b/Icyabukaziyani.mw
@@ -1,3 +1,5 @@
+[[File:Europe location ABX.png|thumb|250px|<font color="grey">Ikarita y’Abukaziya</font>]]
+
 '''Abukaziyani''' (izina mu abukaziyani: ''аҧсуа бызшәа'' cyangwa ''аҧсшәа'') ni [[ururimi]] rwa [[Abukaziya]] na [[Turukiya]]. 
 
 == umugereka – ubuke ==
