--- a/Rwanda.mw
+++ b/Rwanda.mw
@@ -7,6 +7,8 @@
 
 U Rwanda ni [[igihugu]] giherereye muri [[Afurika]] yo hagati mu karere k’ibiyaga bigari, munsi y’Umurongo wa [[Koma y’isi]]. Umurwa mukuru w’u Rwanda witwa [[Kigali]]. Ni gihugu kiza cyane cy’imisozi igihumbi, kikaba gikoresha indimi eshatu: I[[kinyarwanda]], I[[gifaransa]], I[[cyongereza]].
 
+Leta y’u Rwanda ni [[Repubulika]] yigenga kandi ubutegetsi bwose niyo buturukaho, ishingiye kuri [[demokarasi]], igamije guteza imbere abaturage, kandi idashingiye ku idini.
+
 == "Geography" ==
 
 N’igihugu kidakora kunyanja, kiri muri Afurika yo hagati karere bita ak’ibiyaga bigari. U Rwanda rufite ibirunga bitanu, ibiyaga makumyabiri na bitatu n’imigezi myinshi, imwe akaba ariyo soko y’uruzi rwa [[Nil]]. U Rwanda rufite ubuso bwa 26,338 km² ubutaka bukaba bwihariye 24,948 km² amazi agafata 1,390 km². Abaturage babarirwa hafi ya 7,954,013 , ubwo rero n’abantu 281kuri buri km², u Rwanda rubarirwa mu bihubu bituwe cyane kurusha ibindi muri Afurika.
