/* Ubukungu bw’u Rwanda */

--- a/Rwanda.mw
+++ b/Rwanda.mw
@@ -95,6 +95,9 @@ Aya madini niyo shingiro ry’abemera Imana kuva mu gihe cy’ubukoloni. Ikindi 
 
 Ibarura ry’abaturage rya 2002 ryagaragaje ko amadini ahagaze mu buryo bukurikira muri iki gihe: Abagatolika (49,5%), Abaporotesitanti bari mu madini atandukanye (27,2%), Abadivantisite (12,2%); Andi madini ya gikirisito (4%), Abatagira idini (3,6%) n’Abayisilamu (1,8%), indi myemerere 1,7%. Iri barura riragaragaza ko 98,3% by abatuye u Rwanda biyemerera ko bafite idini babarizwamo. Ibi biratwereka ko amadini ari rumwe mu nzego z’imiyoborere ihuza abantu benshi kuko amenshi muri ayo madini atandukanye cyane n’idini gakondo kuko yo ahuza abayoboke bayo kandi akabaha gahunda y’imitekerereze ndetse n’imyitwarire. <ref>[http://www.nurc.gov.rw/documents/researches/Syllabus_Ingando.pdf Ishami Rishinzwe Uburere Mboneragihugu, Ukwakire, 2006]</ref>
 
+== [[Ibendera rya Repubulika y’u Rwanda]] ==
+[[Ibendera]] ry’Igihugu rigizwe n’amabara atatu : icyatsi kibisi, umuhondo, n’ubururu.  
+
 == [[Ubukungu bw’u Rwanda]] ==
 Ubukungu bw’u Rwanda bugizwe ahanini n’ubuhinzi abenshi mu bahinzi batunzwe n’ibyo bahinga. Ubukungu bukaba buhura n’icyibazo cy’uko abantu ari benshi kurusha ubutaka buhari. Kuba u Rwanda rudakora ku nyanjya bikaba byongera ibyo bibazo kubera ko bituma igihugu kitagera ku masoko mpuzamahanga cyangwa kibagerayo bigoranye. Ibihingwa ngengabukungu bya mbere ni ikawa, icyayi n’ibireti. Ibi n’ibyamasoko mpuzamahanga. Mu gihugu, ibihingwa bihaboneka muri byo ni ibitoki, imyumbati, amasaka, imboga, n’ibirayi. Ariko ntibihagije ku isoko ryo mu Rwanda ibindi bitumizwa mu mahanga. Ibindi byongera ku ntungamubiri ku banyarwanda ni amatungo- inka, ihene n’intama. <ref>[http://www.kituochakatiba.org/index2.php?option=com_docman&task=doc_view&gid=1199&Itemid=36 Ugushakisha Ukuri n’Ubumuntu, Kituo Cha Katiba, Nyakanga, 2004 – Gashyantare, 2006] </ref>
 
