*Empty MediaWiki Message*

--- a/Ibendera_ry’igihugu.mw
+++ b/Ibendera_ry’igihugu.mw
@@ -1,5 +1,5 @@
 [[File:Flag-map of the world.svg|thumb|250px|<font color="grey">Ikarita y’amabendera y’igihugu</font>]]
-[[File:Flag-map of the world.svg|thumb|250px|<font color="grey">Ikarita y’amabendera y’igihugu</font>]]
+[[File:Flag of Rwanda.svg|thumb|250px|<font color="grey">Ibendera ry’igihugu cy’u Rwanda</font>]]
 
 '''Ibendera ry’Igihugu'''
 
