*Empty MediaWiki Message*

--- a/Ibendera_ry’igihugu.mw
+++ b/Ibendera_ry’igihugu.mw
@@ -5,4 +5,4 @@
 
 Ibendera ry’igihugu cy’u [[Rwanda]] rigizwe n’amabara atatu : icyatsi kibisi, umuhondo, n’ubururu.
 
-[[Category:Amabendera y’Igihugu]]
+[[Category:Amabendera y’Igihugu| ]]
